--- a/modules/common/btop.conf
+++ b/modules/common/btop.conf
@@ -72,7 +72,7 @@ proc_colors = True
 proc_gradient = True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core = True
+proc_per_core = False
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
@@ -187,10 +187,10 @@ disk_free_priv = False
 show_io_stat = True
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
-io_mode = False
+io_mode = True
 
 #* Set to True to show combined read/write io graphs in io mode.
-io_graph_combined = True
+io_graph_combined = False
 
 #* Set the top speed for the io graphs in MiB/s (100 by default), use format "mountpoint:speed" separate disks with whitespace " ".
 #* Example: "/mnt/media:100 /:20 /boot:1".
